# energyqueue

./: .coverage  .coveragerc  .cursorrules  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  metrics.py  prometheus.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
broker/: queue_manager.py  redis_client.py
dashboard/: app.py
grafana/dashboards/: energyqueue.json
grafana/provisioning/dashboards/: dashboard.yml
jobs/: base_job.py  dead_letter.py  image_resize_job.py  inference_job.py  ml_training_job.py
scheduler/: carbon_client.py  energy_budget.py  energy_model.py  queue_flusher.py  scheduler.py
scripts/: benchmark.sh  check_status.sh  start_workers.sh  submit_jobs.sh
sdk/: producer.py
tests/: conftest.py  test_broker.py  test_carbon_client.py  test_energy_profiler.py  test_scheduler.py  test_worker.py
worker/: energy_profiler.py  heartbeat.py  worker.py  worker_pool.py
